--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/screen.css">
+    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 930px">
+
     <title>Daniel Portfolio</title>
 </head>
 <body>
+    <header>
+        <section>
+            <div class="title-header">
+                <h1>Daniel Carmona </h1>
+            </div>
+            <div class="nav-bar">
+                <nav>
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Projects</a></li>
+                        <li><a href="">CV</a></li>
+                    </ul>
+
+                </nav>
+            </div>
+
+        </section>
+       
+
+
+
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
+
     
 </body>
 </html>
