change size and set screen size BASIC

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 930px">
+    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 600px">
 
     <title>Daniel Portfolio</title>
 </head>
@@ -20,8 +20,11 @@
                     <ul>
                         <li><a href="">Home</a></li>
                         <li><a href="">About</a></li>
-                        <li><a href="">Projects</a></li>
-                        <li><a href="">CV</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">My Work</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Contact</a></li>
+                        
                     </ul>
 
                 </nav>
