body plus fix header

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/mobile.css">
-    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 600px">
+    <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 600px">
+    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 900px">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;1,700&amp;family=Inter:wght@300;500&amp;display=swap" rel="stylesheet">
 
     <title>Daniel Portfolio</title>
 </head>
 <body>
     <header>
-        <section>
+        <section class="header-container">
             <div class="title-header">
                 <h1>Daniel Carmona </h1>
             </div>
@@ -26,18 +28,33 @@
                         <li><a href="">Contact</a></li>
                         
                     </ul>
-
                 </nav>
             </div>
-
         </section>
-       
-
-
-
     </header>
 
     <main>
+
+        <section class="main-exchange-container">
+            <div class="profile-pic">
+                <img src="" alt="">
+            </div>
+            <div class="main-exchange-container--description">
+                <h1>HELLO THIS IS MY TITLE ;)</h1>
+                <p>sajdkashdk jskadhka djkhas djkash djks ahjk dh aksjhdjkashdjkashdjk sakjdhjkashdjksahdjksah djkash dkjashdjkashdjk ashkdhask  sjdhkashdjkashdk jshd kashdjkashdjk ashkjdhsjdh askjdh jksah djkashdurbhvibvuib vjknsui rb jkse bfk ek bfkhesbfiuusbn i hsauoh douahd97 32 hjkdbhd  askjdb sjka bdkjsa</p>
+            </div>
+        </section>
+
+
+
+        <section class="">
+
+
+        </section>
+
+
+
+
 
     </main>
 
