--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/mobile.css">
     <link rel="stylesheet" href="./css/tablet.css" media="(min-width: 600px">
-    <link rel="stylesheet" href="./css/screen.css" media="(min-width: 900px">
+    <link rel="stylesheet" href="./css/screen.css" media="(max-width: 991px">
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Daniel Portfolio</title>
